Modify stages names to avoid format error

--- a/api/test/integration/test_rbac_white_cluster_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_cluster_endpoints.tavern.yaml
@@ -233,7 +233,7 @@ test_name: GET /cluster/nodes/{node_id}
 
 stages:
 
-  - name: Get cluster {worker1} (Deny)
+  - name: Get cluster (worker1) (Deny)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/nodes"
@@ -247,7 +247,7 @@ stages:
       json:
         error: 4000
 
-  - name: Get cluster {worker2} (Allow)
+  - name: Get cluster (worker2) (Allow)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/nodes"
@@ -268,7 +268,7 @@ stages:
           total_affected_items: 1
           total_failed_items: 0
         
-  - name: Get cluster {master-node,worker1,worker2} (Allow, Deny, Allow)
+  - name: Get cluster (master-node,worker1,worker2) (Allow, Deny, Allow)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/nodes"
@@ -320,7 +320,7 @@ test_name: GET /cluster/{node_id}/configuration
 
 stages:
 
-  - name: Request {node_id}
+  - name: Request (master-node)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/master-node/configuration"
@@ -465,7 +465,7 @@ test_name: GET /cluster/{node_id}/info
 
 stages:
 
-  - name: Request {node_id}
+  - name: Request (worker1)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker1/info"
@@ -475,7 +475,7 @@ stages:
     response:
       <<: *permission_denied
 
-  - name: Request {node_id}
+  - name: Request (master-node)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/master-node/info"
@@ -490,7 +490,7 @@ test_name: GET /cluster/{node_id}/logs
 
 stages:
 
-  - name: Request {worker2} (Allow)
+  - name: Request (worker2) (Allow)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker2/logs"
@@ -500,7 +500,7 @@ stages:
     response:
       status_code: 200
 
-  - name: Request {worker1} (Deny)
+  - name: Request (worker1) (Deny)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker1/logs"
@@ -515,7 +515,7 @@ test_name: GET /cluster/{node_id}/logs/summary
 
 stages:
 
-  - name: Request {worker2} (Allow)
+  - name: Request (worker2) (Allow)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker2/logs/summary"
@@ -525,7 +525,7 @@ stages:
     response:
       status_code: 200
 
-  - name: Request {worker1} (Deny)
+  - name: Request (worker1) (Deny)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker1/logs/summary"
@@ -565,7 +565,7 @@ test_name: GET /cluster/{node_id}/stats
 
 stages:
 
-  - name: Cluster stats {worker1} today (Deny)
+  - name: Cluster stats (worker1) today (Deny)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker1/stats"
@@ -575,7 +575,7 @@ stages:
     response:
       <<: *permission_denied
 
-  - name: Cluster stats {worker2} today (Allow)
+  - name: Cluster stats (worker2) today (Allow)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker2/stats"
@@ -592,7 +592,7 @@ test_name: GET /cluster/{node_id}/status
 
 stages:
 
-  - name: Request {worker2} (Allow)
+  - name: Request (worker2) (Allow)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker2/status"
@@ -602,7 +602,7 @@ stages:
     response:
       status_code: 200
 
-  - name: Request {worker1} (Deny)
+  - name: Request (worker1) (Deny)
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/cluster/worker1/status"
