--- a/src/unit_tests/os_crypto/md5_sha1_sha256/CMakeLists.txt
+++ b/src/unit_tests/os_crypto/md5_sha1_sha256/CMakeLists.txt
@@ -8,7 +8,10 @@
 cmake_minimum_required(VERSION 3.10)
 
 list(APPEND md5_sha1_tests_names "test_md5_sha1_sha256_op")
-list(APPEND md5_sha1_tests_flags "-Wl,--wrap,wpopenv,--wrap,wpclose,--wrap,fread,--wrap,fclose,--wrap,fflush,--wrap,fgets,--wrap,fgetpos,--wrap,fopen,--wrap,fseek,--wrap,fwrite,--wrap,remove,--wrap,fgetc,--wrap,wfopen")
+list(APPEND md5_sha1_tests_flags "-Wl,--wrap,wpopenv -Wl,--wrap,wpclose -Wl,--wrap,fread -Wl,--wrap,fclose \
+                                  -Wl,--wrap,fflush -Wl,--wrap,fgets -Wl,--wrap,fgetpos -Wl,--wrap,fopen \
+                                  -Wl,--wrap,fseek -Wl,--wrap,fwrite -Wl,--wrap,remove -Wl,--wrap,fgetc \
+                                  -Wl,--wrap,wfopen -Wl,--wrap,popen -Wl,--wrap,_mwarn")
 
 # Compiling tests
 list(LENGTH md5_sha1_tests_names count)
