--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,6 +70,7 @@ link_directories(${SRC_FOLDER})
 link_directories(${SRC_FOLDER}/external/rocksdb/build/)
 link_directories(${SRC_FOLDER}/external/openssl/)
 link_directories(${SRC_FOLDER}/external/lzma/build/)
+link_directories(${SRC_FOLDER}/external/zlib/)
 
 add_subdirectory(external/benchmark EXCLUDE_FROM_ALL)
 add_subdirectory(external/googletest EXCLUDE_FROM_ALL)
@@ -89,6 +90,7 @@ include_directories(${SRC_FOLDER}/external/googletest/googletest/include)
 include_directories(${SRC_FOLDER}/external/googletest/googlemock/include)
 include_directories(${SRC_FOLDER}/external/openssl/include)
 include_directories(${SRC_FOLDER}/external/lzma/src/liblzma/api)
+include_directories(${SRC_FOLDER}/external/zlib/)
 
 add_subdirectory(shared_modules/utils)
 add_subdirectory(shared_modules/router)
