Fix path bug - Add documentation - Fix cmake

--- a/src/shared_modules/content_manager/CMakeLists.txt
+++ b/src/shared_modules/content_manager/CMakeLists.txt
@@ -21,6 +21,7 @@ include_directories(${SRC_FOLDER}/external/nlohmann)
 include_directories(${SRC_FOLDER}/external/curl/include/curl)
 include_directories(${SRC_FOLDER}/external/lzma/src/liblzma/api)
 include_directories(${SRC_FOLDER}/external/rocksdb/include)
+include_directories(${SRC_FOLDER}/external/zlib/)
 
 include_directories(${SHARED_MODULES})
 include_directories(${SHARED_MODULES}/utils)
@@ -32,6 +33,7 @@ include_directories(${SHARED_MODULES}/content_manager/src/components)
 link_directories(${SRC_FOLDER})
 link_directories(${SRC_FOLDER}/external/lzma/build/)
 link_directories(${SRC_FOLDER}/external/rocksdb/build/)
+link_directories(${SRC_FOLDER}/external/zlib/)
 link_directories(${SHARED_MODULES}/router/build)
 link_directories(${SHARED_MODULES}/http-request/build)
 
